project-todos/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: dwk-project-todos-dep
spec:
    replicas: 1
    selector:
        matchLabels:
            app: dwk-project-todos
    template:
        metadata:
            labels:
                app: dwk-project-todos
        spec:
            containers:
                - name: dwk-project-todos
                  image: PROJECT/TODOS_IMAGE
                  imagePullPolicy: Always
                  livenessProbe:
                    httpGet:
                        path: /
                        port: 3000
                    initialDelaySeconds: 5
                    periodSeconds: 5
                  readinessProbe:
                    httpGet:
                        path: /
                        port: 3000
                    initialDelaySeconds: 5
                    periodSeconds: 5
                  resources:
                    limits:
                      cpu: "100m"
                      memory: "75Mi"
