project-todos/manifests/postgresstatefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: dwk-postgres-ss
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dwk-postgres
  serviceName: dwk-postgres-svc
  template:
    metadata:
      labels:
        app: dwk-postgres
    spec:
      containers:
      - name: postgres
        image: postgres:13.2
        imagePullPolicy: "IfNotPresent"
        ports:
          - containerPort: 5432
        volumeMounts:
          - name: data
            mountPath: /data
  volumeClaimTemplates:
  - metadata:
      name: data
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 1Gi
