project-todos/manifests/postgressvc.yaml
apiVersion: v1
kind: Service
metadata:
  name: dwk-postgres-svc
  labels:
    app: dwk-postgres
spec:  
  ports:
  - port: 5432
  clusterIP: None
  selector:
    app: dwk-postgres
