project-todos/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
    namespace: project
    name: dwk-project-todos-svc
spec:
    type: ClusterIP 
    selector:
        app: dwk-project-todos
    ports:
        - port: 2345
          protocol: TCP
          targetPort: 3000
