project-todos/manifests/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: dwk-project-todos-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/add-base-url: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /todos
spec:
  rules:
    - http:
        paths:
        - path: /todos
          backend:
            serviceName: dwk-project-todos-svc
            servicePort: 2345
